Ternary Ops exercise

--- a/Conditionals/TernaryOperators/index.html
+++ b/Conditionals/TernaryOperators/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Green for Go!</title>
+    <title>Ternary Operators</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 
 </head>
