--- a/Conditional_assignment/Conditionals_Personal/index.html
+++ b/Conditional_assignment/Conditionals_Personal/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Green for Go!</title>
+    <title>Conditionals Personal</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 
 </head>
